--- a/name.html
+++ b/name.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <h1>Input a string<h1>
-  <FORM action="name.cgi" method="GET">
+  <FORM action="/name.cgi" method="GET">
   Enter a string:
   <input name="sname" size=20 maxlength=50>
   <P>
