playing with get

--- a/name.html
+++ b/name.html
@@ -1,12 +1,11 @@
 <html>
 <body>
   <h1>Input a string<h1>
-  <FORM action="/name.cgi" method="GET">
-  Enter a string:
-  <input name="sname" size=20 maxlength=50>
-  <P>
-  <INPUT TYPE=submit value="Submit">
-  <INPUT TYPE=reset value="Reset">
-  </FORM>
+  <form action = "/cgi-bin/name.cgi" method = "get">
+  First Name: <input type = "text" name = "first_name">  <br />
+      
+  Last Name: <input type = "text" name = "last_name" />
+  <input type = "submit" value = "Submit" />
+  </form>
 </body>
 </html>
