--- a/pretty.html
+++ b/pretty.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1 style="text-align:center;color:red">CS 410 Website</h1>
+<h1 style="text-align:center;color:red">CS 410 Webserver</h1>
 <br>
 <p style="text-align:center">
     <img src="pikachu.gif" alt="Pika" class="center"> 
